# GTestProject

./: .gitignore  CMake_GoogleTest.md  CRTP_before_cpp23.md  ConvertUTF  ConvertUTF.md  README.md  attributed_code.md  benchmark.md  cmake.md  codechecker.md  comport.md  concurrency.md  constexpr.md  constructor_rules_of_five.md  cpp_comparison.md  cpp_concepts.md  ctad.md  distcc.md  docs-doxygen.md  environmant.md  exception_safefy.md  factories.md  godbolt.md  grpc.md  koda_try_to_use.md  modules.md  parse_csv.md  pkg-config.md  polymorphic_memory_resources.md  ranges.md  return_value.md  soci_build.md  spdlog_build.md  target_include_directories.md  tips.md  tui.md  uniqueRnd.md  vcpkg.md
CMakeExamples/: CMakeLists.txt  spdlog_build.md
CMakeExamples/BoostConfig/: BoostConfig.cmake  CMakeLists.txt  README.md  main.cpp
CMakeExamples/BoostConfig/convert/: CMakeLists.txt  convert.cpp  convert.h
CMakeExamples/BuildWithGoogleTest/: CMakeLists.txt  sum_integers.cpp  sum_integers.hpp
CMakeExamples/PortableCCNET/: CMakeLists.txt  CommportBoost.cpp  CommportBoost.h  README.md  main.cpp
CMakeExamples/PortableCCNET/ccnet/: CMakeLists.txt  CommportBoost.cpp  device.cpp  device.h  transport.cpp  transport.h
CMakeExamples/PortableCCNET/unittest/: CMakeLists.txt  test.cpp
CMakeExamples/SQLiteVsFileStream/: CMakeLists.txt  README.md  SQLiteInsertionBenchmark.cpp
CMakeExamples/constexpr/: CMakeLists.txt  crc8_table.cpp
CMakeExamples/target_include/: CMakeLists.txt  main.cpp
CMakeExamples/target_include/somelib/: CMakeLists.txt  somelib.cpp  somelib.h
CMakeExamples/target_include/unittest/: CMakeLists.txt  test.cpp
CMakeExamples/tui/: CMakeLists.txt  main.cpp
CMakeExamples/tuiKimiK2/: CMakeLists.txt
CMakeExamples/tuiKimiK2/src/: main.cpp
Contributors/TestBoostAsIO/: CMakeLists.txt  main.cpp
Contributors/TestBoostAsIO/CommPort/: CMakeLists.txt  CommPort.cpp  CommPort.h
Contributors/baston/CMake_GoogleTest/: README.md  main.cpp  test.cpp
Contributors/baston/ConvertUTF8/: CMakeLists.txt  ConvertUTF8.cpp  ConvertUTF8.h  test.cpp  test.h
Contributors/baston/Project3/: Project3.sln  Project3.vcxproj  main.cpp  sum_integers.cpp
Contributors/baston/UnitTest3/: UnitTest3.cpp  UnitTest3.vcxproj
Contributors/baston/uniqueRnd_Test/: CMakeLists.txt  test.cpp  test.h  uniqueRnd.cpp  uniqueRnd.h
sourcesToTest/ConvertUTF8/: ConvertUTF8.cpp  ConvertUTF8.h
sourcesToTest/grpc_example/: CMakeLists.txt  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  server.cpp
sourcesToTest/grpc_example/proto/: helloworld.proto
sourcesToTest/ranges/: CMakeLists.txt  main.cpp
sourcesToTest/uniqueRnd/: CMakeLists.txt  test.cpp  uniqueRnd.cpp  uniqueRnd.h
